[package]
name = "wudao"
version = "0.1.0"
authors = ["Yucklys <yucklys687@outlook.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.26.1", features = ["event-stream"] }
dice_forge = "0.2.2"
directories = "5.0.1"
futures = "0.3.28"
rand = "0.8.5"
regex = "1.8.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.5"
tui = { package = "ratatui", version = "0.22" }
log = "0.4.20"
tui-logger = { version = "0.9.4", features = ["ratatui-support"] }
